--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,7 +8,7 @@
 
     <ion-tab-button tab="tab2">
       <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-label>Gestion des offres</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
