--- a/src/app/candidature/candidature.page.html
+++ b/src/app/candidature/candidature.page.html
@@ -27,6 +27,7 @@
         <ion-card-content>
           {{ appli.description }}
         </ion-card-content>
+          <ion-button  expand="full" (click)="goToOffre(appli)" color="secondary">Voir l'offre</ion-button>
       </ion-card>
     </div>
   </ion-list>
