--- a/src/app/page-candidature/page-candidature.page.html
+++ b/src/app/page-candidature/page-candidature.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>pageCandidature</ion-title>
+    <ion-title>Candidatures</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,26 +11,34 @@
         <!-- (click)="goToCandidature(appli.id_offer)" -->
         <ion-card-header>
           <ion-row>
-            <ion-col>
+            <ion-col size-xl="0" size-xs="4">
             </ion-col>
-            <ion-col>
+            <ion-col size-xl="4" size-xs="4">
               <ion-avatar>
-                <img src="https://nicolasfabing.fr/ionic/imagesUsers/{{appli.img}}" alt="">
+                <img src="https://nicolasfabing.fr/ionic/imagesUsers/{{appli.img}}" alt=""> <br>
               </ion-avatar>
-              <ion-card-subtitle>{{ appli.name }} {{ appli.firstName }}</ion-card-subtitle>
+              <ion-card-subtitle>{{ appli.name }} <br> {{ appli.first_name }}</ion-card-subtitle>
             </ion-col>
-            <ion-col>
+            <ion-col size-xl="9" size-xs="4">
             </ion-col>
           </ion-row>
-          <ion-card-title>Poste: {{ appli.poste }}</ion-card-title>
+          <ion-card-subtitle>Poste: {{ appli.poste }}</ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>
-          Place: {{ appli.birth_place }} <br>
-          Country: {{ appli.birth_country }} <br>
+          <p> Place: {{ appli.birth_place }}</p>
+          <p> Country: {{ appli.birth_country }} </p>
+          <p> Weight: {{ appli.weight }} </p>
+          <p> Size: {{ appli.size }}</p>
         </ion-card-content>
-        <ion-button expand="full" color="success">Valider Candidature</ion-button>
-      </ion-card>
-      
+        <ion-row>
+        <ion-col size-xl="6" size-xs="6">
+        <ion-button *ngIf="appli.state == 0" expand="full" color="success" (click)="accepter(appli)">Accepter</ion-button>
+      </ion-col>
+      <ion-col size-xl="6" size-xs="6">
+        <ion-button expand="full" color="danger"  (click)="rejeter(appli)">Rejeter</ion-button>
+      </ion-col>
+      </ion-row>
+      </ion-card> 
     </div>
   </ion-list>
 </ion-content>
