Intégration de la branch de Jules (en progression) Bouton mon profil/mon Club fonctionnelle ! ^^

--- a/src/app/player-profil/player-profil.page.html
+++ b/src/app/player-profil/player-profil.page.html
@@ -66,7 +66,7 @@
       <ion-row>
         <ion-col></ion-col>
         <ion-col>
-          <ion-input type="file" name="image" formControlName="file" accept="image/*" (change)="changeListener($event)"
+          <ion-input type="file" name="image" formControlName="file" accept=".jpg, .png, .jpeg" (change)="changeListener($event)"
             id="inputFile">
           </ion-input>
           <ion-button type="submit" expand="block" color="light">UPLOAD<ion-icon name="cloud-upload-outline" slot="end">
