--- a/src/app/recherche-profil/recherche-profil.page.html
+++ b/src/app/recherche-profil/recherche-profil.page.html
@@ -92,4 +92,8 @@
         </div>
     </ion-card-content>
   </ion-card>
+  <ion-row *ngIf="displayBtnWhenGoodUser == true" >
+    <ion-col class="ion-justify-content-center bntBottom"><ion-button (click)="redirectToPlayerProfil()">Modifier Profil</ion-button></ion-col>
+    <ion-col class="ion-justify-content-center bntBottom"><ion-button (click)="redirectToPlayerCv()">Modifier CV</ion-button></ion-col>
+  </ion-row>
 </ion-content>
