--- a/src/app/club-register/club-register.page.html
+++ b/src/app/club-register/club-register.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="login-register"></ion-back-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>Inscription Club</ion-title>
   </ion-toolbar>
