--- a/src/app/player-cv/player-cv.page.html
+++ b/src/app/player-cv/player-cv.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>CV - {{tabPlayer.name}} {{ tabPlayer.first_name}}</ion-title>
   </ion-toolbar>
 </ion-header>
