--- a/src/app/player-profil/player-profil.page.html
+++ b/src/app/player-profil/player-profil.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>{{tabPlayer.name}} {{ tabPlayer.first_name}}</ion-title>
     <ion-avatar slot="end">
       <img id="avatarProfil" src="{{imgUser}}">
