--- a/src/app/recherche-profil/recherche-profil.page.html
+++ b/src/app/recherche-profil/recherche-profil.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Profil - {{tabPlayer.first_name}} {{tabPlayer.name}}</ion-title>
   </ion-toolbar>
 </ion-header>
