Intégration du système de candidature de David

--- a/src/app/candidature/candidature.page.html
+++ b/src/app/candidature/candidature.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title><h1>Candidatures</h1></ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Candidatures</ion-title>
   </ion-toolbar>
 </ion-header>
 
