--- a/src/app/recherche-club/recherche-club.page.html
+++ b/src/app/recherche-club/recherche-club.page.html
@@ -1,7 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-back-button *ngIf="canGoBack"></ion-back-button>
+      <ion-menu-button *ngIf="!canGoBack"></ion-menu-button>
     </ion-buttons>
     <ion-title>Profil - {{tabClub.name}}</ion-title>
   </ion-toolbar>
