--- a/src/app/recherche-profil/recherche-profil.page.html
+++ b/src/app/recherche-profil/recherche-profil.page.html
@@ -1,7 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-back-button *ngIf="canGoBack"></ion-back-button>
+      <ion-menu-button *ngIf="!canGoBack"></ion-menu-button>
     </ion-buttons>
     <ion-title>Profil - {{tabPlayer.first_name}} {{tabPlayer.name}}</ion-title>
   </ion-toolbar>
@@ -11,7 +12,7 @@
   <ion-card>
     <ion-card-header class="ion-align-items-center" id="firstCardHeader">
       <ion-avatar>
-        <img src="https://nicolasfabing.fr/ionic/imagesUsers/{{idPlayer}}.jpg">
+        <img src="https://nicolasfabing.fr/ionic/imagesUsers/{{idPlayer}}.jpg" alt="img_player">
       </ion-avatar>
       <div id="firstCardHeaderRight">
         <ion-card-title>{{tabPlayer.first_name}} {{tabPlayer.name}}</ion-card-title>
