Affichage dynamique du bouton retour selon le contexte dans les pages : recherche-club.page.html et recherche-profil.page.html désactivation des boutons sur la page d'une offre si on n'est connectée en tant que club

--- a/src/app/offre-details/offre-details.page.html
+++ b/src/app/offre-details/offre-details.page.html
@@ -17,7 +17,7 @@
                 <ion-col size-xl="4" size="6">
                     <h2>{{ offer.club_name }}</h2>
                 </ion-col>
-                <ion-col *ngIf="globalService.idUser === 0" size-xl="1" size-xs="2">
+                <ion-col *ngIf="globalService.idUser > 0" size-xl="1" size-xs="2">
                     <ion-img [src]="imgFavorite" (click)="handleClickFavorite()" ></ion-img>
                 </ion-col>
             </ion-row>
@@ -43,7 +43,7 @@
 
 
             <ion-row class="justify-content-center padding-top">
-                <ion-col *ngIf="globalService.idUser === 0" size-xl="4" size="12">
+                <ion-col *ngIf="globalService.idUser > 0" size-xl="4" size="12">
                     <ion-button expand="block" (click)="handleClickApplication()" [color]="colorButton" >{{ textButton }}</ion-button>
                 </ion-col>
             </ion-row>
