--- a/src/app/player-profil/player-profil.page.html
+++ b/src/app/player-profil/player-profil.page.html
@@ -52,8 +52,8 @@
       </div>
 
       <ion-item>
-        <ion-label position="floating">Photo</ion-label>
-        <ion-input></ion-input>
+        <ion-label position='floating'>Photo</ion-label>
+        <ion-input readonly></ion-input>
         <ion-row class="rowImg">
           <img class="logo" src="{{img_new}}" *ngIf="img_new!=''" />
         </ion-row>
@@ -66,7 +66,7 @@
       <ion-row>
         <ion-col></ion-col>
         <ion-col>
-          <ion-input type="file" name="image" formControlName="file" accept="image/*" (change)="changeListener($event)"
+          <ion-input type="file" name="image" formControlName="file" accept=".jpg, .png, .jpeg" (change)="changeListener($event)"
             id="inputFile">
           </ion-input>
           <ion-button type="submit" expand="block" color="light">UPLOAD<ion-icon name="cloud-upload-outline" slot="end">
