ajout des images par defaut

--- a/src/app/recherche-profil/recherche-profil.page.html
+++ b/src/app/recherche-profil/recherche-profil.page.html
@@ -8,7 +8,7 @@
   <ion-card>
     <ion-card-header class="ion-align-items-center" id="firstCardHeader">
       <ion-avatar>
-        <img src="https://nicolasfabing.fr/ionic/imagesUsers/{{idPlayer}}.jpg">
+        <img src="{{imgUser}}">
       </ion-avatar>
       <div id="firstCardHeaderRight">
         <ion-card-title>{{tabPlayer.first_name}} {{tabPlayer.name}}</ion-card-title>
