--- a/src/app/recherche-club/recherche-club.page.html
+++ b/src/app/recherche-club/recherche-club.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-row>
       <ion-title>Profil - {{tabClub.name}}</ion-title>
       <div id="btnUpdate" *ngIf="displayBtnWhenGoodClub == true">
