--- a/src/app/page-candidature/page-candidature.page.html
+++ b/src/app/page-candidature/page-candidature.page.html
@@ -18,7 +18,7 @@
             </ion-col>
             <ion-col size-xl="4" size-xs="4">
               <ion-avatar>
-                <img src="https://nicolasfabing.fr/ionic/imagesUsers/{{appli.img}}" alt=""> <br>
+                <img src="https://nicolasfabing.fr/ionic/imagesUsers/{{appli.id}}.jpg" alt=""> <br>
               </ion-avatar>
               <ion-card-subtitle>{{ appli.name }} <br> {{ appli.first_name }}</ion-card-subtitle>
             </ion-col>
