--- a/src/app/player-search-results/player-search-results.page.html
+++ b/src/app/player-search-results/player-search-results.page.html
@@ -19,7 +19,7 @@
         <ion-item (click)="goToPageDetails(player.id)" detail>
 
           <ion-thumbnail slot="start">
-            <img src="https://nicolasfabing.fr/ionic/imagesUsers/{{player.img}}" alt="img"
+            <img src="https://nicolasfabing.fr/ionic/imagesUsers/{{player.id}}.jpg" alt="img"
                  style="max-height: auto; width: auto">
           </ion-thumbnail>
 
